# nyc-block-pulse

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_v1.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: agent_discover.yml  agent_monitor.yml  daily_update.yml  test.yml
agent/: state.json
api/: Dockerfile  README.md  __init__.py  deps.py  main.py  requirements.txt
api/routes/: block.py  demographics.py  events.py  search.py
api/tests/: conftest.py  test_routes.py
docs/: NEXT_SESSION.md  TWEAK_collector_schema_fixes.md  TWEAK_ingestion_session_isolation.md
docs/superpowers/plans/: 2026-05-12-crime-fire-evictions-signals.md  2026-05-12-idle-panel-enrichment.md
docs/superpowers/specs/: 2026-05-12-crime-fire-evictions-signals-design.md  2026-05-12-idle-panel-enrichment-design.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_block_demographics.py
src/nyc_pulse/: __init__.py  cli.py  config.py  db.py  models.py
src/nyc_pulse/agent/: catalog.py  codegen.py  evaluate.py  monitor.py  pr.py  state.py  validate.py  (+1 more)
tests/: test_address.py  test_agent_catalog.py  test_agent_codegen.py  test_agent_evaluate.py  test_agent_state.py  test_agent_wire.py  test_cascade.py  test_cli.py  test_collectors_schema.py  test_signals.py  test_socrata.py  test_upsert.py  test_upsert_batching.py
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BlockPanel.tsx  Map.tsx  MapViewToggle.tsx  SearchBar.tsx  SignalToggle.tsx
web/lib/: api.ts  db.ts  nyu.ts  types.ts
(+32 files in other folders)
