[project]
name = "nyc-block-pulse"
version = "0.1.0"
description = "Evidence-backed NYC block intelligence from public datasets."
readme = "ARCHITECTURE.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "polars>=0.20",
    "google-generativeai>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[project.scripts]
nyc-pulse = "nyc_pulse.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyc_pulse"]
